add form to add rides

--- a/src/kmtracker/api/templates/components/_table.html
+++ b/src/kmtracker/api/templates/components/_table.html
@@ -1,4 +1,4 @@
-<table class="min-w-full divide-y-2 divide-gray-200">
+<table class="min-w-full divide-y-2 divide-gray-200" id="{{ table_id }}">
   {% include "components/_table_head.html" %}
 
   <tbody class="divide-y divide-gray-200">
