--- a/src/kmtracker/api/templates/components/_table_row.html
+++ b/src/kmtracker/api/templates/components/_table_row.html
@@ -1,4 +1,4 @@
-<tr class="*:text-gray-900 *:first:font-medium">
+<tr class="*:text-gray-900">
   {% for key in keys %}
   <td class="px-3 py-2">{{ row[key] }}</td>
   {% endfor %}
