--- a/src/kmtracker/api/templates/index.html
+++ b/src/kmtracker/api/templates/index.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 <div class="grid grid-cols-1 md:grid-cols-2 gap-x-4 gap-y-1">
-  {% call card() %}<div hx-get="/stats" hx-trigger="load"></div>{% endcall %}
-  {% call card() %}<div hx-get="/rides/new" hx-trigger="load"></div>{% endcall %}
+  {% call card() %}<div id="stats" hx-get="/stats" hx-trigger="load,refresh"></div>{% endcall %}
+  {% call card() %}<div id="new" hx-get="/rides/new" hx-trigger="load,refresh"></div>{% endcall %}
 </div>
 
 
